Setting up for Class
Setting up for the start of classes for Fall 2020.

--- a/notebooks/0.0 Course Title and Information.ipynb
+++ b/notebooks/0.0 Course Title and Information.ipynb
@@ -13,7 +13,53 @@
     "<br>Industrial & Systems Engineering Department\n",
     "<br>Auburn University\n",
     "\n",
-    "<b>TA - TBD</b>\n"
+    "<b>Jingwei Liu (TA)</b>\n",
+    "<br>PhD Student"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Course Description</b>\n",
+    "<br>Introduction to modern data science tools with applications in manufacturing and service industries and operations. Focus on the manipulation and use of small and large datasets. Tools include Jupyter, Python, R, and MySQL along with the related packages that support data modeling, visualization, and analysis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Course Objectives</b>\n",
+    "<br>By the completion of this class, students should understand the use of our \n",
+    "standard toolset (Python, Jupyter, R, Matplotlib, MySQL) and have the ability to \n",
+    "manipulate and visualize datasets of all sizes.  In addition, students should \n",
+    "have a basic understating of data science and the available tools/resources related to this topic."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Topics by Week</b>\n",
+    "<br>(subect to change based on course progress)\n",
+    "<ol>\n",
+    "<li>Course introduction, technology toolkit\n",
+    "<li>Introduction to Python\n",
+    "<li>Python Programming Basics\n",
+    "<li>Python – Numpy, SciPy\n",
+    "<li>Python - Pandas\n",
+    "<li>Sample Data Sets 1 and Data Preprocessing\n",
+    "<li>Python – Matplotlib\n",
+    "<li>R, RStudio, CRAN\n",
+    "<li>R Basics\n",
+    "<li>Data Handling with R Data Frames\n",
+    "<li>Data Visualization and Exploratory Data Analysis (EDA)\n",
+    "<li>Sample Data Sets 2\n",
+    "<li>Relational Databases\n",
+    "<li>Relational Databases\n",
+    "<li>Integration\n",
+    "<li>Integration\n",
+    "</ol>"
    ]
   },
   {
