Added Python code and Notebooks
Prep for intial Python coverage.

--- a/notebooks/MySQL Sample.ipynb
+++ b/notebooks/MySQL Sample.ipynb
@@ -9,9 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully connected....\n"
+     ]
+    }
+   ],
    "source": [
     "# Setting Up\n",
     "import mysql.connector\n",
@@ -28,9 +36,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tables:\n",
+      "\tairplane\n",
+      "\talbum\n",
+      "\tartist\n",
+      "\tbooking\n",
+      "\tcustomer\n",
+      "\tflight\n",
+      "\titems\n",
+      "\tjob\n",
+      "\torders\n",
+      "\tpassenger\n",
+      "\tplayed\n",
+      "\tskus\n",
+      "\tslots\n",
+      "\ttrack\n",
+      "Database closed.\n"
+     ]
+    }
+   ],
    "source": [
     "# List the tables using a cursor object\n",
     "print (\"Tables:\")\n",
@@ -68,7 +99,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
