Added additional Python files for Namespacs

--- a/notebooks/Generating Random Die Rolls.ipynb
+++ b/notebooks/Generating Random Die Rolls.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,9 +64,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jsmith\\Documents\\GitHub\\ToolsForDataAnalyticsAndModeling\\notebooks\n"
+     ]
+    }
+   ],
    "source": [
     "# What is the current working directory?\n",
     "import os\n",
@@ -76,9 +84,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean: 3.500; Std. Dev.: 1.708\n",
+      "[1667, 1675, 1646, 1672, 1681, 1659]\n",
+      "[0.1667, 0.1675, 0.1646, 0.1672, 0.1681, 0.1659]\n"
+     ]
+    }
+   ],
    "source": [
     "# execute an external script\n",
     "%run \"..\\code\\python\\random_rolls.py\""
@@ -138,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
