Update 1.1 Python Lists and Dictionaries.ipynb
Added some comments and additional code cells.

--- a/notebooks/1.1 Python Lists and Dictionaries.ipynb
+++ b/notebooks/1.1 Python Lists and Dictionaries.ipynb
@@ -6,14 +6,15 @@
    "source": [
     "# 1.1 Python Lists and Dictionaries\n",
     "\n",
-    "This section introduces Python lists, dictionaries and comprehensions."
+    "This section introduces Python lists, dictionaries and comprehensions.  The objects are foundational to Python and are used extensively."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Introduction to Lists"
+    "## Introduction to Lists\n",
+    "Lists are *sequences* of objects.  A *sequence* is a \"positionally ordered collection of other objects.\""
    ]
   },
   {
@@ -22,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define a list and then show the list\n",
+    "# Define a list and then show the list.  Note that the list contains objects of different types (ints, floats, strings).\n",
     "l1 = [1, 2, 3, 17.24, 967, 45, \"dog\", 'cat', [1, 2, 3]]\n",
     "l1"
    ]
@@ -34,7 +35,7 @@
    "outputs": [],
    "source": [
     "# element referencing, i, -i, 0-based.\n",
-    "l1[1]"
+    "l1[0], l1[1]"
    ]
   },
   {
@@ -43,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# and can be negative\n",
+    "# and can be negative (-1 starts at the \"end\" of the list)\n",
     "l1[-1]"
    ]
   },
@@ -53,7 +54,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Iterators\n",
+    "# Lists have \"iterators\" that allow you to easily iterate though the list elements\n",
+    "# without using explicit indices\n",
     "for item in l1:\n",
     "    print(item)"
    ]
@@ -64,7 +66,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# slicing - as with strings, slice is element i, i+1, i+2, up to, but not including j\n",
+    "# as compared to the traditional indexing method ...\n",
+    "for j in range(len(l1)):\n",
+    "    print(l1[j])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List slicing - as with string slicing, the slice \n",
+    "# icludes elements i, i+1, i+2, up to, but not including j (and is a separate list)\n",
     "l2 = l1[2:6]\n",
     "l2"
    ]
@@ -97,7 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Nested lists\n",
+    "# Nested lists - this is a \"list of lists.\"\n",
     "l2 = [[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n",
     "l2"
    ]
@@ -108,7 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# this one and the previous are equivalent -- which is clearer (visually)?\n",
+    "# this one and the previous one are equivalent -- which is clearer (visually)?\n",
     "l2 = [ [1, 2, 3]\n",
     "     , [4, 5, 6]\n",
     "     , [7, 8, 9]\n",
@@ -122,7 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# to view the nexted list in matrix form:\n",
+    "# to view the nested list (list of lists) in matrix form:\n",
     "for r in l2:\n",
     "    print(r)"
    ]
@@ -131,8 +145,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### List Mutability\n",
-    "This is IMPORTANT and causes beginners problems.  Unlike simple objects, lists are mutable in Python."
+    "### List Mutability\n",
+    "This is IMPORTANT and causes beginners problems.  Unlike simple objects, lists are *mutable* in Python."
    ]
   },
   {
@@ -208,7 +222,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Sample List Functions/Methods"
+    "### Sample List/Sequence Functions/Methods"
    ]
   },
   {
@@ -261,7 +275,8 @@
    "outputs": [],
    "source": [
     "#sort - Note that in the default version (with 'cow' in the list), you'll get an error\n",
-    "#  since the default sorting can't process numbers and strings together.\n",
+    "#  since the default sorting can't process numbers and strings together.  We will revisit\n",
+    "#  this limitation later.\n",
     "l.sort()\n",
     "l"
    ]
@@ -355,6 +370,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Note that since strings are sequences, they also have iterators\n",
+    "for char in str:\n",
+    "    print(char)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "l = [\"one\", 2, \"three\", 4, 'Five']\n",
     "for j in range(len(l)):\n",
     "    print(l[j])"
@@ -375,8 +401,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Introduction to List Comprehensions\n",
-    "This is an important concept -- comprehensions are your friends!"
+    "## Introduction to List Comprehensions\n",
+    "This is an **important** concept in Python world -- comprehensions are your friends!"
    ]
   },
   {
@@ -501,7 +527,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 18 random dice rolls\n",
+    "# 18 random die rolls\n",
     "import random\n",
     "[random.randint(1, 6) for i in range(18)]\n",
     "# note that the iterator (i) is only used to iterate and isn't used in the expression."
