--- a/notebooks/1.0 Intro to Python.ipynb
+++ b/notebooks/1.0 Intro to Python.ipynb
@@ -45,9 +45,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jsmith\\Documents\\GitHub\\ToolsForDataAnalyticsAndModeling\\notebooks\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "print(os.getcwd())"
