--- a/notebooks/1.1 Python Lists and Dictionaries.ipynb
+++ b/notebooks/1.1 Python Lists and Dictionaries.ipynb
@@ -417,7 +417,8 @@
     "    , [7, 8, 9]\n",
     "    ]\n",
     "# Now, m is a list of 3 lists\n",
-    "# Equivalent to m = [[1, 2, 3], [4,5,6],[7,8,9]] (A list of three three-element lists)"
+    "# Equivalent to m = [[1, 2, 3], [4,5,6],[7,8,9]] (A list of three three-element lists)\n",
+    "m"
    ]
   },
   {
@@ -640,7 +641,9 @@
    "source": [
     "# Print each person's name and age\n",
     "for p in people:\n",
-    "    print(\"{:} is {:} years old\".format(p[0], p[1]))"
+    "    print(\"{:} is {:} years old\".format(p[0], p[1]))\n",
+    "# In this statement, each p represents a \"record\" in the dataset and\n",
+    "# each element of p (it is a list) is an \"attribute\""
    ]
   },
   {
@@ -762,6 +765,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "d['a'], d['b'], d['c']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_key = 'a'\n",
+    "d[my_key]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for k in ['a', 'b','c']:\n",
+    "    print(d[k])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# all of the keys\n",
     "d.keys()"
    ]
   },
@@ -771,7 +804,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# as a list\n",
     "list(d.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# iterator -- note that the key is the iterator\n",
+    "for k in d:\n",
+    "    print(d[k])"
    ]
   },
   {
@@ -798,16 +843,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for k in d:\n",
-    "    print(d[k])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# a dictionary of lists\n",
     "dl = { \n",
     "     'one' : [1, 2, 3, 4, 5]\n",
     "    ,'two' : [6, 7, 8, 9, 10]\n",
@@ -890,7 +926,7 @@
    "outputs": [],
    "source": [
     "# Final Exams\n",
-    "or student in students:\n",
+    "for student in students:\n",
     "    print (\"{:} made a {:d} on the final exam\".format(student, students[student]['FinalExam']))"
    ]
   },
@@ -918,7 +954,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
