Update 1.1 Python Lists and Dictionaries.ipynb
Added comments.

--- a/notebooks/1.1 Python Lists and Dictionaries.ipynb
+++ b/notebooks/1.1 Python Lists and Dictionaries.ipynb
@@ -692,6 +692,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Using a more human-friendly format\n",
+    "\"The average age of the team members is {:.1f} years.\".format(sum([p[1] for p in people])/float(len(people)))\n",
+    "# Note that the previous examples create anonymous objects -- nothing\n",
+    "# persists after dispalaying the expressions and the memory is \n",
+    "# marked for garbage collection."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Find the oldest person\n",
     "# max age\n",
     "ages =[p[1] for p in people] \n",
@@ -954,7 +967,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
