--- a/notebooks/1.1 Python Lists and Dictionaries.ipynb
+++ b/notebooks/1.1 Python Lists and Dictionaries.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "## Introduction to Lists\n",
-    "Lists are *sequences* of objects.  A *sequence* is a \"positionally ordered collection of other objects.\""
+    "Lists are *sequences* of objects.  A *sequence* is a \"positionally ordered collection of other objects.\"  Lists can include any types of Python objects (and do not need to be homogeneous)."
    ]
   },
   {
@@ -23,7 +23,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define a list and then show the list.  Note that the list contains objects of different types (ints, floats, strings).\n",
+    "# Define a list and then show the list.  Note that the list contains objects of \n",
+    "# different types (ints, floats, strings).\n",
     "l1 = [1, 2, 3, 17.24, 967, 45, \"dog\", 'cat', [1, 2, 3]]\n",
     "l1"
    ]
@@ -213,7 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Why wasn't L2 changed this time, but it was last time?\n",
+    "# Why was L2 changed last time but not this time?\n",
     "l1 = ['a', 'b']\n",
     "l1, l2"
    ]
@@ -693,7 +694,9 @@
    "outputs": [],
    "source": [
     "# Using a more human-friendly format\n",
-    "\"The average age of the team members is {:.1f} years.\".format(sum([p[1] for p in people])/float(len(people)))\n",
+    "\"The average age of the team members is {:.1f} years.\".format(\n",
+    "    sum([p[1] for p in people])/float(len(people))\n",
+    ")\n",
     "# Note that the previous examples create anonymous objects -- nothing\n",
     "# persists after dispalaying the expressions and the memory is \n",
     "# marked for garbage collection."
@@ -705,7 +708,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Find the oldest person\n",
+    "# Find the oldest person.  Go though step-by-step, uncommenting lines to\n",
+    "# see the progress.\n",
     "# max age\n",
     "ages =[p[1] for p in people] \n",
     "max(ages)\n",
@@ -767,6 +771,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# A dictionary is similar to a list, but uses a 'key' rather than an integer\n",
+    "# index to specify 'location' in the dictionary.\n",
     "# Dictionaries are very useful, but there's usually a bit of a learning curve\n",
     "d = {\"a\": 123, \"b\": 345, \"c\": 789}\n",
     "d"
@@ -967,7 +973,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
