Added a notebook and fixed typos

--- a/notebooks/1.2 Truth Values and Boolean Tests.ipynb
+++ b/notebooks/1.2 Truth Values and Boolean Tests.ipynb
@@ -10,13 +10,12 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "All Pyton objects have an inherent *Boolean* value.\n",
-    "-  Any nonzero or nonempty object is *true*\n",
-    "-  Zero numbers, empty bojects, and the special object *None* are considered *false*\n",
+    "All Python objects have an inherent *Boolean* value.\n",
+    "-  Any nonzero or nonempty object is *True*\n",
+    "-  Zero numbers, empty bojects, and the special object *None* are considered *False*\n",
     "\n",
     "*bool(arg)* is a built-in function to test the Boolean value of an argument (expression).\n",
     "\n",
