Update 2.0 Introduction to NumPy.ipynb
Minor edits to text and code.

--- a/notebooks/2.0 Introduction to NumPy.ipynb
+++ b/notebooks/2.0 Introduction to NumPy.ipynb
@@ -61,7 +61,11 @@
     "    print(\"  Item Size: {:}\".format(the_array.itemsize))\n",
     "    print(\"Data Buffer: {:}\".format(the_array.data))\n",
     "    if show_data:\n",
-    "        print(the_array)"
+    "        print(\"The data:\")\n",
+    "        print(the_array)\n",
+    "\n",
+    "print(\"Example function call:\")\n",
+    "show(np.array([1, 2, 3, 4, 5]),1)"
    ]
   },
   {
@@ -69,7 +73,7 @@
    "metadata": {},
    "source": [
     "## NumPy Arrays\n",
-    "### Creating Arrays and Access Elements"
+    "### Creating Arrays and Accessing Elements"
    ]
   },
   {
@@ -765,7 +769,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
