Update 2.0 Introduction to NumPy.ipynb
Minor tweaks.

--- a/notebooks/2.0 Introduction to NumPy.ipynb
+++ b/notebooks/2.0 Introduction to NumPy.ipynb
@@ -211,8 +211,8 @@
    "source": [
     "# Use a comprehension - From VanderPlas\n",
     "# Nested lists result in multi-dimensional arrays\n",
-    "# Creating an anonymous array (see above)\n",
-    "show(np.array([range(i, i + 3) for i in [2, 4, 6]]), 1)"
+    "n = np.array([range(i, i + 3) for i in [2, 4, 6]])\n",
+    "show(n, 1)"
    ]
   },
   {
@@ -769,7 +769,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
