--- a/notebooks/2.0 Introduction to NumPy.ipynb
+++ b/notebooks/2.0 Introduction to NumPy.ipynb
@@ -93,7 +93,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# The second element\n",
+    "# Create a NumPy array from a list and specify the data type\n",
+    "a = np.array([1.5, 0.7, 22.4], dtype=\"int32\")\n",
+    "show(a, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The second element (zero-based, so it's index 1)\n",
     "a[1]"
    ]
   },
@@ -148,7 +159,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# zeros to create and array and initialize with zeros. Ones() works similarly.\n",
+    "# zeros function to create and array and initialize with zeros. Ones() works similarly.\n",
+    "# Note that you can also specify the data type.  Also note that with some\n",
+    "# datatype (e.g. float32), you seem to need to quote the type.\n",
     "c = np.zeros((3, 8), dtype=int)\n",
     "show(c, 1)"
    ]
@@ -184,9 +197,9 @@
    },
    "outputs": [],
    "source": [
-    "# Create the same array, but then reshape it to a 3x5 matrix (a \n",
+    "# Create the same array, but used floats and then reshape it to a 3x5 matrix (a \n",
     "#   2-dimensional array, technically)\n",
-    "a = np.arange(15).reshape(3,5)\n",
+    "a = np.arange(15, dtype=float).reshape(3,5)\n",
     "show(a, 1)"
    ]
   },
@@ -221,8 +234,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Show the details of what's going in the above\n",
-    "[range(i, i + 3) for i in [2, 4, 6]]"
+    "# Show the details of what's going in the above assignment statement.\n",
+    "# First the inner comprehension\n",
+    "t = [range(i, i + 3) for i in [2, 4, 6]]\n",
+    "t"
    ]
   },
   {
@@ -231,7 +246,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[list(range(i, i + 3)) for i in [2, 4, 6]]"
+    "# Next create the NumPy array using the list created\n",
+    "# by the comprehension\n",
+    "np.array(t)"
    ]
   },
   {
@@ -319,7 +336,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Reshaping and np.newaxis"
+    "### More on reshaping and np.newaxis"
    ]
   },
   {
@@ -487,6 +504,13 @@
    "metadata": {},
    "source": [
     "## Universal Functions and the Slowness of Loops - VP 02.03"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Monte Carlo Example"
    ]
   },
   {
@@ -769,7 +793,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
