--- a/notebooks/Sample Datasets.ipynb
+++ b/notebooks/Sample Datasets.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,12 +25,14 @@
     "    print (\"Columns: {:}\".format(data.columns))\n",
     "    print (\"  Shape: {:}\".format(data.shape))\n",
     "    if show_data:\n",
-    "        print(data.values)"
+    "        print(data.values)\n",
+    "\n",
+    "print(\"Pandas version: {:}\".format(pd.__version__))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,118 +59,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  Index: RangeIndex(start=0, stop=894, step=1)\n",
-      "Columns: Index(['payer', 'meal', 'party_size', 'day', 'cost', 'tip'], dtype='object')\n",
-      "  Shape: (894, 6)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>payer</th>\n",
-       "      <th>meal</th>\n",
-       "      <th>party_size</th>\n",
-       "      <th>day</th>\n",
-       "      <th>cost</th>\n",
-       "      <th>tip</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>dinner</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Thu</td>\n",
-       "      <td>15.75</td>\n",
-       "      <td>3.06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Female</td>\n",
-       "      <td>lunch</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Mon</td>\n",
-       "      <td>14.93</td>\n",
-       "      <td>1.84</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>dinner</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Mon</td>\n",
-       "      <td>17.23</td>\n",
-       "      <td>3.37</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Male</td>\n",
-       "      <td>dinner</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Wed</td>\n",
-       "      <td>37.39</td>\n",
-       "      <td>3.64</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Female</td>\n",
-       "      <td>dinner</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Wed</td>\n",
-       "      <td>18.86</td>\n",
-       "      <td>3.47</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    payer    meal  party_size  day   cost   tip\n",
-       "0    Male  dinner           1  Thu  15.75  3.06\n",
-       "1  Female   lunch           1  Mon  14.93  1.84\n",
-       "2    Male  dinner           1  Mon  17.23  3.37\n",
-       "3    Male  dinner           2  Wed  37.39  3.64\n",
-       "4  Female  dinner           1  Wed  18.86  3.47"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Grab a data set using the key and show the first few rows\n",
-    "fkey = \"meals\"\n",
+    "fkey = \"matches\"\n",
     "df = pd.read_csv(\"../data/\"+fnames[fkey])\n",
     "show(df)\n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col in df.columns:\n",
+    "    print (\"{:} ({:})\".format(col,df[col].dtype))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -194,7 +111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
