Shoppers example and Numpy example

--- a/notebooks/Sample Datasets.ipynb
+++ b/notebooks/Sample Datasets.ipynb
@@ -54,6 +54,7 @@
     "    ,\"ervs\"      :\"13_erv.csv\"\n",
     "    ,\"fexchange\" :\"14_Foreign_Exchange_Rates.csv\"\n",
     "    ,\"gmobility\" :\"15_Global_Mobility_Report.csv\"\n",
+    "    ,\"shoppers\"  :\"16_online_shoppers_purchasing_intention.csv\"\n",
     "}"
    ]
   },
@@ -64,7 +65,7 @@
    "outputs": [],
    "source": [
     "# Grab a data set using the key and show the first few rows\n",
-    "fkey = \"matches\"\n",
+    "fkey = \"shoppers\"\n",
     "df = pd.read_csv(\"../data/\"+fnames[fkey])\n",
     "show(df)\n",
     "df.head()"
