--- a/notebooks/Data Indexing and Selection Examples.ipynb
+++ b/notebooks/Data Indexing and Selection Examples.ipynb
@@ -16,6 +16,7 @@
    "outputs": [],
    "source": [
     "# Getting things ready\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "from datetime import datetime\n",
     "\n",
@@ -117,6 +118,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Can also apply the max function to the DataFrame\n",
+    "df1.max()\n",
+    "# Also try min(), sum(), std() and others ..\n",
+    "# https://pandas.pydata.org/pandas-docs/stable/reference/frame.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# What months had the unemployment rate greater than or equal to 9.5\n",
     "df1[df1.UnemploymentRate >= 9.5]\n",
     "# Here the index expression is a mask -- see the next cell"
@@ -141,6 +154,26 @@
     "# What about the Unemployment Rate and Jobs Added numbers for \n",
     "# the year 2010?\n",
     "df1[['Month', 'UnemploymentRate','JobsAdded']].loc[24:35]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# or\n",
+    "df1.iloc[24:36, :3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# or\n",
+    "df1.loc[24:35,['Month', 'UnemploymentRate','JobsAdded']]"
    ]
   },
   {
@@ -234,6 +267,102 @@
    "outputs": [],
    "source": [
     "df2.JobsAdded.loc['2012-01-01':'2012-12-01']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dealing with Missing Values - None and NaN Values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# what about null values?\n",
+    "df2.isnull().head(10)\n",
+    "# GDP is reported quarterly rather than monthly\n",
+    "# Note that the .head(10) is because I only want to see the first 10 rows."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NumPy functions do not handle NA and NaN value \"well.\"\n",
+    "x = np.array(df2.GDP)\n",
+    "np.mean(x)\n",
+    "# Why the quotes on \"well\"?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove the NA values.  Note that the entire\n",
+    "# records (rows) are removed, not just the specific values.\n",
+    "df2.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now we can use NumPy on the \"good\" values\n",
+    "x = np.array(df2.dropna()['GDP'])\n",
+    "np.mean(x)\n",
+    "# Why the quotes on \"good\"?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Or we can just use Pandas on the Series with the NA and NaN values\n",
+    "df2.GDP.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# And we can use the Pandas functions across the DataFrame\n",
+    "df2.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# What about non-numeric columns?  Recall that df1 has a Date (object) column.\n",
+    "df1.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We can tell Pandas to apply the function to non-numeric columns (not\n",
+    "# sure why we'd want to do this, but we can).\n",
+    "df1.mean(numeric_only=False)\n",
+    "# See https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.mean.html for details."
    ]
   },
   {
