Update 3.0 Introduction to Pandas.ipynb
Added additional examples, removed multi-index material.

--- a/notebooks/3.0 Introduction to Pandas.ipynb
+++ b/notebooks/3.0 Introduction to Pandas.ipynb
@@ -543,7 +543,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Indexers - loc, iloc, ix"
+    "## Indexers - loc, iloc, and (what used to be) ix"
    ]
   },
   {
@@ -631,7 +631,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ix - hybrid - Note the deprecation warning.  Avoid using since it will go away sometime.\n",
+    "# ix - hybrid - Has been deprecated.\n",
     "data.ix[1]"
    ]
   },
@@ -641,7 +641,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.ix[1:3]"
+    "# Note that even with non-integer indexes the slicing behavior is still different\n",
+    "data1 = pd.Series(['a', 'b', 'c', 'd'], index=['h','i','j','k'])\n",
+    "data1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data1[1:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data1.iloc[1:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data1.loc['i':'k']"
    ]
   },
   {
@@ -699,7 +728,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# lists of columns -- note that you can specify the order\n",
+    "# lists of columns -- note that you can specify the order and note\n",
+    "# the double brackets.\n",
     "data[['pop', 'area']]"
    ]
   },
@@ -711,7 +741,8 @@
    "source": [
     "# Add a new series using existing series\n",
     "data['density'] = data['pop'] / data['area']\n",
-    "data"
+    "data\n",
+    "# Note the ufunc (universal function) behavior"
    ]
   },
   {
@@ -910,133 +941,6 @@
     "# dropna() created a new Series object -- the original is unchanged\n",
     "data"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Pandas MultiIndex"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# define index as a list of tuples\n",
-    "index = [('California', 2000), ('California', 2010),\n",
-    "         ('New York', 2000), ('New York', 2010),\n",
-    "         ('Texas', 2000), ('Texas', 2010)]\n",
-    "index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# now redefine as a multiindex\n",
-    "index = pd.MultiIndex.from_tuples(index)\n",
-    "index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "populations = [33871648, 37253956,\n",
-    "               18976457, 19378102,\n",
-    "               20851820, 25145561]\n",
-    "pop = pd.Series(populations, index)\n",
-    "pop"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pop_df = pd.DataFrame({'total': pop,\n",
-    "                       'under18': [9267089, 9284094,\n",
-    "                                   4687374, 4318033,\n",
-    "                                   5906301, 6879014]})\n",
-    "pop_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pop_df['total']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pop_df.iloc[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pop_df.iloc[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pop_df.loc['California']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pop_df.loc['Texas']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pop[:,2000]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pop[pop > 22000000]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
