Update 3.0 Introduction to Pandas.ipynb
Added prompt to check the new notebook.

--- a/notebooks/3.0 Introduction to Pandas.ipynb
+++ b/notebooks/3.0 Introduction to Pandas.ipynb
@@ -889,6 +889,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## See Sample Data Indexing and Selection Examples Notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Handling Missing Data"
    ]
   },
