Addidtions and tweaks

--- a/notebooks/3.1 - Concatenating, Appending, Joining DataFrames.ipynb
+++ b/notebooks/3.1 - Concatenating, Appending, Joining DataFrames.ipynb
@@ -196,6 +196,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "pd.concat([A,D])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pd.concat([A,D], axis=1)"
    ]
   },
@@ -205,7 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.concat([A, E], join_axes=[A.columns])"
+    "pd.concat([A,D], ignore_index=True)"
    ]
   },
   {
@@ -214,7 +223,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A"
+    "pd.concat([A,D], axis=1, ignore_index=True)"
    ]
   },
   {
@@ -223,7 +232,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "E"
+    "pd.concat([A,B,C,D,E])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.concat([A,B,C,D,E], axis=1)"
    ]
   },
   {
