--- a/notebooks/Data Indexing and Selection Examples.ipynb
+++ b/notebooks/Data Indexing and Selection Examples.ipynb
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# US Economic Data dataset\n",
+    "## US Economic Data dataset\n",
     "## Default read_csv()"
    ]
   },
@@ -366,11 +366,75 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example Use-case With Pandas and Concatenation\n",
+    "See the slide set for details of the problem."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# start with df2\n",
+    "df2 = pd.read_csv(filepath + '10_us_economic_data.csv', parse_dates = ['Month'], index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract the gdp data and drop the nan values\n",
+    "g = df2.GDP.dropna()\n",
+    "g.head(6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a series using the 2008 data (first 4 rows)\n",
+    "y1 = pd.Series(data = g.iloc[0:4].values, index=['Q1', 'Q2', 'Q3', 'Q4'], name=\"2008\")\n",
+    "y1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replicate for year 2\n",
+    "y2 = pd.Series(data = g.iloc[4:8].values, index=['Q1', 'Q2', 'Q3', 'Q4'], name=\"2009\")\n",
+    "y2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Concatenate them together\n",
+    "gdp = pd.concat([y1, y2], axis=1)\n",
+    "show(gdp,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now just replicate for years 3, 4,and 5 .... or create a small loop that automates the process."
+   ]
   }
  ],
  "metadata": {
