--- a/notebooks/3.1 - Concatenating, Appending, Joining DataFrames.ipynb
+++ b/notebooks/3.1 - Concatenating, Appending, Joining DataFrames.ipynb
@@ -47,7 +47,7 @@
    "outputs": [],
    "source": [
     "# Careful ... indices don't have to be unique -- confusing.\n",
-    "pd.concat([A, B], sort=False)"
+    "pd.concat([A, B])"
    ]
   },
   {
@@ -57,7 +57,7 @@
    "outputs": [],
    "source": [
     "# try extracting row '1' - using the dictionary-type (explicit index) method\n",
-    "pd.concat([A,B], sort=False).loc[1]"
+    "pd.concat([A,B]).loc[1]"
    ]
   },
   {
@@ -67,7 +67,7 @@
    "outputs": [],
    "source": [
     "# or row '1' - using Python implicit numbering style\n",
-    "pd.concat([A,B], sort=False).iloc[1]"
+    "pd.concat([A,B]).iloc[1]"
    ]
   },
   {
@@ -79,7 +79,7 @@
     "# Catching repeats\n",
     "# We didn't go over exception handling -- look up 'try/catch' for details :-)\n",
     "try:\n",
-    "    pd.concat([A, B], sort=False, verify_integrity=True)\n",
+    "    pd.concat([A, B], verify_integrity=True)\n",
     "except ValueError as e:\n",
     "    print(\"ValueError:\", e)"
    ]
@@ -92,7 +92,7 @@
    "source": [
     "# if indexes don't matter -- ignore them and create a new\n",
     "# explicit index with the combined dataframe\n",
-    "pd.concat([A, B], sort=False, ignore_index=True)"
+    "pd.concat([A, B], ignore_index=True)"
    ]
   },
   {
@@ -102,7 +102,7 @@
    "outputs": [],
    "source": [
     "# Now the explicit index matches the implict index\n",
-    "pd.concat([A, B], sort=False, ignore_index=True).index"
+    "pd.concat([A, B], ignore_index=True).index"
    ]
   },
   {
@@ -112,7 +112,7 @@
    "outputs": [],
    "source": [
     "# specify that the concatenation should happen along axis 1\n",
-    "pd.concat([A, B], axis=1)"
+    "pd.concat([A, B], axis=1)\n"
    ]
   },
   {
@@ -500,6 +500,13 @@
     "# ... and then apply that mask to the left-join dataset ...\n",
     "a[pd.isna(a['customer'])]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
